force-app/main/default/objects/EnquixImportMappings__c/EnquixImportMappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings Object that capture the mappings for the Enquix (CSV) files. Name of the individual settings instance represents a row header in the import sheet.</description>
    <label>Enquix Import Mappings</label>
</CustomObject>