force-app/main/default/objects/EnquixImportMappings__c/fields/CopyValueFromSheet__c.field-meta.xml
<CustomField>
    <fullName>CopyValueFromSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a value should be copied from the import sheet.</description>
    <inlineHelpText>Indicates whether a value should be copied from the import sheet.</inlineHelpText>
    <label>Copy Value From Sheet</label>
    <type>Checkbox</type>
</CustomField>