force-app/main/default/objects/EnquixImportMappings__c/fields/EnquixHeaderValue__c.field-meta.xml
<CustomField>
    <fullName>EnquixHeaderValue__c</fullName>
    <description>Header value as presented in the import CSV</description>
    <inlineHelpText>Header value as presented in the import CSV</inlineHelpText>
    <label>Enquix Header Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>