force-app/main/default/objects/EnquixImportMappings__c/fields/ImportType__c.field-meta.xml
<CustomField>
    <fullName>ImportType__c</fullName>
    <description>Account or Order. Defines a scope for the particular mapping.</description>
    <inlineHelpText>Account or Order. Defines a scope for the particular mapping.</inlineHelpText>
    <label>Import Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>