force-app/main/default/objects/EnquixImportMappings__c/fields/SalesforceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceFieldAPIName__c</fullName>
    <description>This field captures the value of the Salesforce Field API Name associated with a specific Mapping</description>
    <externalId>true</externalId>
    <inlineHelpText>This field captures the value of the Salesforce Field API Name associated with a specific Mapping</inlineHelpText>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>