force-app/main/default/objects/EnquixImportMappings__c/fields/SalesforceRecordGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesforceRecordGroup__c</fullName>
    <description>This field captures the value of the Group associated with a particular mapping, e.g. it could be Account or Location for Account imports.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field captures the value of the Group associated with a particular mapping, e.g. it could be Account or Location for Account imports.</inlineHelpText>
    <label>Salesforce Record Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>