force-app/main/default/objects/EnquixImportMappings__c/listViews/OrderLine.listView-meta.xml
<ListView>
    <fullName>OrderLine</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>CopyValueFromSheet__c</columns>
    <columns>EnquixHeaderValue__c</columns>
    <columns>ImportType__c</columns>
    <columns>SalesforceFieldAPIName__c</columns>
    <columns>SalesforceFieldLabel__c</columns>
    <columns>SalesforceRecordGroup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesforceRecordGroup__c</field>
        <operation>equals</operation>
        <value>OrderLine</value>
    </filters>
    <label>OrderLine</label>
</ListView>