force-app/main/default/objects/EnquixImportMappings__c/listViews/Product.listView-meta.xml
<ListView>
    <fullName>Product</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>CopyValueFromSheet__c</columns>
    <columns>EnquixHeaderValue__c</columns>
    <columns>ImportType__c</columns>
    <columns>SalesforceFieldAPIName__c</columns>
    <columns>SalesforceFieldLabel__c</columns>
    <columns>SalesforceRecordGroup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesforceRecordGroup__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <label>Product</label>
</ListView>